--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -1,27 +1,37 @@
-﻿@page
+﻿@page "/Login"
 @model PRN231_2_EventFlowerExchange_FE.Pages.Login.LoginModel
 @{
     ViewData["Title"] = "Login";
 }
 
-<div id="plant" class="plants">
-<div class="row justify-content-center">
-    <div class="col-md-4">
-        <h1 class="text-center mb-4 ">Login</h1>
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="text-black" asp-for="LoginRequest.Email"></label>
-                <input asp-for="LoginRequest.Email" class="form-control" />
-                <span asp-validation-for="LoginRequest.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-black"  asp-for="LoginRequest.Password"></label>
-                <input asp-for="LoginRequest.Password" class="form-control" type="password" />
-                <span asp-validation-for="LoginRequest.Password" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block mt-3">Log in</button>
-        </form>
+<div id="plant" class="plants py-16">
+    <div class="mt-10 flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-sm lg:max-w-4xl">
+        <div class="hidden lg:block lg:w-1/2 bg-cover"
+             style="background-image:url('https://images.unsplash.com/photo-1530092285049-1c42085fd395?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D')">
+        </div>
+        <div class="w-full p-8 lg:w-1/2">
+            <h1 class="text-2xl font-semibold text-gray-700 text-center mb-4">Login</h1>
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mt-4">
+                    <label class="text-gray-700" asp-for="LoginRequest.Email"></label>
+                    <input asp-for="LoginRequest.Email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
+                    <span asp-validation-for="LoginRequest.Email" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-4">
+                    <label class="text-gray-700" asp-for="LoginRequest.Password"></label>
+                    <input asp-for="LoginRequest.Password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password" />
+                    <span asp-validation-for="LoginRequest.Password" class="text-danger"></span>
+                </div>
+                <div class="mt-8">
+                    <button type="submit" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Log in</button>
+                </div>
+                <div class="mt-4 flex items-center justify-between">
+                    <span class="border-b w-1/5 md:w-1/4"></span>
+                    <a href="/Register" class="text-xs text-gray-500 uppercase">or sign up</a>
+                    <span class="border-b w-1/5 md:w-1/4"></span>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 </div>
