--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Footer.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Footer.cshtml
@@ -1,39 +1,38 @@
-﻿<footer>
-    <div id="contact" class="footer">
-        <div class="container">
-            <div class="row pdn-top-30">
-                <div class="col-md-12 ">
-                    <div class="footer-box">
-                        <div class="headinga">
-                            <h3>Address</h3>
-                            <span>Demo Store .New York  United States</span>
-                            <p>(+71 98765348)</p>
-                        </div>
-                        <ul class="location_icon">
-                            <li> <a href="#"><img src="~/icon/facebook.png"></a></li>
-                            <li> <a href="#"><img src="~/icon/Twitter.png"></a></li>
-                            <li> <a href="#"><img src="~/icon/linkedin.png"></a></li>
-                            <li> <a href="#"><img src="~/icon/instagram.png"></a></li>
-                        </ul>
-                        <div class="menu-bottom">
-                            <ul class="link">
-                                <li> <a href="#">Home</a></li>
-                                <li> <a href="#">About</a></li>
-                                <li> <a href="#">Plant</a></li>
-                                <li> <a href="#">Gallery</a></li>
-                                <li> <a href="#">Contact us</a></li>
+﻿<footer class="bg-white">
+    <div class="container px-4 mx-auto">
+        <div class="pt-24 pb-11 mx-auto max-w-4xl">
+            <a class="block md:mx-auto mb-5 max-w-max" href="#">
+                <img src="~/images/hoalogo.png" alt="logo" class="h-8" />
+            </a>
 
-                            </ul>
-
-                        </div>
-                    </div>
+            <div class="flex flex-wrap justify-center -mx-3 lg:-mx-6">
+                <div class="w-full md:w-auto p-3 md:px-6">
+                    <a href="/terms"
+                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Terms</a>
+                </div>
+                <div class="w-full md:w-auto p-3 md:px-6">
+                    <a href="/privacy"
+                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Privacy</a>
+                </div>
+                <div class="w-full md:w-auto p-3 md:px-6">
+                    <a class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium" href="">Contact Us</a>
+                </div>
+                <div class="w-full md:w-auto p-3 md:px-6">
+                    <a href="/careers"
+                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Careers</a>
+                </div>
+                <div class="w-full md:w-auto p-3 md:px-6">
+                    <a href="/pricing"
+                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Pricing</a>
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <div class="container">
-                <p>Copyright 2019 All Rights Reserved Design By  <a href="https://html.design/">Free Html Templates</a></p>
-            </div>
-        </div>
+    </div>
+    <div class="border-b border-gray-100"></div>
+    <div class="container px-4 mx-auto">
+        <p class="py-10 md:pb-20 text-md text-gray-400 font-medium text-center">
+            © 2023 example.com.
+            All rights reserved.
+        </p>
     </div>
 </footer>
