--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Layout.cshtml
@@ -17,40 +17,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen"> <!--[if lt IE 9]> <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script> <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script> <![endif]-->
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
-<body class="main-layout">
+<partial name="_Header" />
+<body>
 
-    <partial name="_Header" />
+
 
 
     <main >
         @RenderBody()
     </main>
 
-    <partial name="_Footer" />
 
 
-    <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/jquery-3.0.0.min.js"></script>
-    <script src="~/js/plugin.js"></script>
-    <script src="~/js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="~/js/custom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $(".fancybox").fancybox({
-                openEffect: "none",
-                closeEffect: "none"
-            });
-
-            $(".zoom").hover(function () {
-                $(this).addClass('transition');
-            }, function () {
-                $(this).removeClass('transition');
-            });
-        });
-    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
+<partial name="_Footer" />
+
 </html>
